@@ -62,6 +62,7 @@ public:
     // Returns the frame the document belongs to or 0 if the document is frameless.
     WEBKIT_API WebFrame* frame() const;
     WEBKIT_API bool isHTMLDocument() const;
+    WEBKIT_API bool isXHTMLDocument() const;
     WEBKIT_API bool isPluginDocument() const;
     WEBKIT_API WebURL baseURL() const;
     WEBKIT_API WebURL firstPartyForCookies() const;
