@@ -62,6 +62,11 @@ bool WebDocument::isHTMLDocument() const
     return constUnwrap<Document>()->isHTMLDocument();
 }
 
+bool WebDocument::isXHTMLDocument() const
+{
+    return constUnwrap<Document>()->isXHTMLDocument();
+}
+
 bool WebDocument::isPluginDocument() const
 {  
     return constUnwrap<Document>()->isPluginDocument();
