@@ -1,3 +1,15 @@
+2010-05-28  Aaron Boodman  <aa@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        Add isXHTMLDocument() to WebDocument.
+
+        https://bugs.webkit.org/show_bug.cgi?id=39887
+
+        * public/WebDocument.h: Add isXHTMLDocument().
+        * src/WebDocument.cpp: ditto.
+        (WebKit::WebDocument::isXHTMLDocument): dittorama.
+
 2010-05-27  Jeremy Orlow  <jorlow@chromium.org>
 
         Reviewed by Steve Block.
