@@ -1,3 +1,14 @@
+2010-05-28  Aaron Boodman  <aa@chromium.org>
+
+        Reviewed by Darin Fisher.
+
+        Added isXHTMLDocument() to WebCore::Document.
+
+        https://bugs.webkit.org/show_bug.cgi?id=39887
+
+        * dom/Document.h: Add isXHTMLDocument().
+        (WebCore::Document::isXHTMLDocument): Ditto.
+
 2010-05-28  Peter Kasting  <pkasting@google.com>
 
         Reviewed by Darin Adler.
